...
        }

    Scaffold(
        topBar = {
            TopAppBar(
                title = {
                    Text(text = "Bow Configurations")
                },
                navigationIcon = {
                    IconButton(onClick = exitFn) {
                        Icon(Icons.Filled.ArrowBack, "Back")
                    }
                },
...
                    DropdownMenu(
                        expanded = menuExpanded,
                        properties = PopupProperties(),
                        onDismissRequest = { menuExpanded = false }
                    ) {
                        DropdownMenuItem(
                            text = { Text("New") },
                            onClick = {
                                newFn()
                                menuExpanded = false
                            }
                        )
                        DropdownMenuItem(
...
